fix blurry background on mobile devices

--- a/src/app/start/start.component.scss
+++ b/src/app/start/start.component.scss
@@ -1,13 +1,16 @@
 @import '../../theme/variables.scss';
 
 @mixin heroBackground($path, $fileending) {
-  $breakpoints: 320, 576, 768, 992, 1200, 1680, 1920;
+  $breakpoints-width: 320, 576, 768, 992, 1200, 1680, 1920;
+  $breakpoints-height: 213, 384, 512, 661, 800, 1120, 1280;
 
   background-image: url($path + '.' + $fileending);
 
-  @each $breakpoint in $breakpoints {
-    @media (min-width: #{$breakpoint}px) {
-      background-image: url($path + '.' + $breakpoint + '.' + $fileending);
+  @for $i from 1 through length($breakpoints-width) {
+    $breakpoint-width: nth($breakpoints-width, $i);
+    $breakpoint-height: nth($breakpoints-height, $i);
+    @media (min-width: #{$breakpoint-width}px), (min-height: #{$breakpoint-height}px) {
+      background-image: url($path + '.' + $breakpoint-width + '.' + $fileending);
 
       // media query source: https://medium.com/@micjamking/hd-retina-display-media-queries-b5562b5430d6
       @media only screen and (-webkit-min-device-pixel-ratio: 1.25),
@@ -16,7 +19,7 @@
         only screen and (min-device-pixel-ratio: 1.25),
         only screen and (min-resolution: 200dpi),
         only screen and (min-resolution: 1.25dppx) {
-        background-image: url($path + '.' + $breakpoint + '@2x' + '.' + $fileending);
+        background-image: url($path + '.' + $breakpoint-width + '@2x' + '.' + $fileending);
       }
     }
   }
